[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/Alef-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Container" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.5
margin_right = 44.5
margin_bottom = 73.0

[node name="LatencyText" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -69.0
margin_top = 4.0
margin_right = 69.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Latency"
align = 1
valign = 1
uppercase = true

[node name="LatencyText2" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 42.5
margin_top = 25.0
margin_right = 57.5
margin_bottom = 59.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="LatencyText3" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -57.5
margin_top = 25.0
margin_right = -42.5
margin_bottom = 59.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
